<?xml version="1.0" encoding="utf-8"?>
<!-- Ingles -->
<resources>
    <string name="app_name" translatable="false">Invst.app</string>
    <string name="autoria_nome" translatable="false">Tayssa Asakawa</string>
    <string name="autoria_email" translatable="false">tayssa.asakawa@hotmail.com</string>
    <string name="autoria_linkedin" translatable="false">linkedin.com/in/tayssa-asakawa</string>

    <string name="title_listagem">My assets</string>
    <string name="title_cadastro">Add asset</string>
    <string name="title_editar">Edit asset</string>
    <string name="title_configuracoes">Settings</string>
    <string name="menu_adicionar">Add</string>
    <string name="menu_configuracoes">Settings</string>
    <string name="menu_sobre">About</string>
    <string name="menu_editar">Edit</string>
    <string name="menu_excluir">Delete</string>
    <string name="patrimonio_total">Total portfolio</string>
    <string name="nenhum_ativo">No assets found.</string>
    <string name="confirm_excluir_titulo">Confirm deletion</string>
    <string name="confirm_sim">Yes</string>
    <string name="confirm_nao">No</string>
    <string name="toast_item_clicado">Selected: %1$s</string>
    <string name="cd_favorito">Favorite</string>
    <string name="cd_logo">App logo</string>
    <string name="cd_email">Email</string>
    <string name="cd_linkedin">LinkedIn</string>
    <string name="cd_utfpr">UTFPR logo</string>
    <string name="cd_grafico">Portfolio allocation by category</string>
    <string name="label_nome_produto">Product name *</string>
    <string name="hint_nome_produto">E.g.: Tesouro Selic 2027</string>
    <string name="label_valor_inicial">Initial value (R$) *</string>
    <string name="hint_valor">0.00</string>
    <string name="label_categoria">Category</string>
    <string name="label_instituicao">Institution</string>
    <string name="label_tipo_renda">Income type *</string>
    <string name="radio_renda_fixa">Fixed income</string>
    <string name="radio_renda_variavel">Variable income</string>
    <string name="label_favorito">Mark as favorite</string>
    <string name="label_anotacoes">Notes</string>
    <string name="hint_anotacoes">Notes about the asset…</string>
    <string name="btn_salvar">Save</string>
    <string name="btn_limpar">Clear</string>
    <string name="toast_limpar">Form cleared</string>
    <string name="toast_salvo">Asset saved</string>
    <string name="toast_atualizado">Asset updated</string>
    <string name="erro_nome_obrigatorio">Product name is required</string>
    <string name="erro_valor_invalido">Invalid initial value</string>
    <string name="erro_tipo_renda">Please select an income type</string>
    <string name="config_ordenacao">LIST ORDER</string>
    <string name="config_por_nome">By name (A–Z)</string>
    <string name="config_por_valor">By value (highest first)</string>
    <string name="config_por_categoria">By category</string>
    <string name="config_preferencias">PREFERENCES</string>
    <string name="config_apenas_favoritos">Show only favorites</string>
    <string name="config_mostrar_valores">Show values in the list</string>
    <string name="config_salva">Setting saved</string>
    <string name="config_info">Settings are saved automatically on this device.</string>
    <string name="autoria_versao">Version 1.0.0</string>
    <string name="autoria_secao_sobre">ABOUT THE APP</string>
    <string name="autoria_desc_1">Invst.app is a personal app for controlling investments. It lets you register financial assets, organize them by category and institution, mark favorites and follow the total value of your portfolio.</string>
    <string name="autoria_desc_2">Developed as an academic project for the Mobile Java Development course, focusing on minimalist usability.</string>
    <string name="autoria_secao_dev">DEVELOPER</string>
    <string name="autoria_dev_cargo">QA / Future Dev</string>
    <string name="autoria_secao_inst">INSTITUTION</string>
    <string name="autoria_inst_nome">Federal University of Technology of Paraná</string>
    <string name="autoria_curso">Specialization in Java Technology - Class XXXIII</string>
    <string name="autoria_disciplina">Course: Mobile Java Development</string>
    <string name="autoria_bloco">Block 4</string>
    <string name="autoria_direitos">© 2026 Tayssa Asakawa. All rights reserved.</string>

    <plurals name="qtd_ativos">
        <item quantity="one">%d asset</item>
        <item quantity="other">%d assets</item>
    </plurals>
    <plurals name="selecionados">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <plurals name="confirm_excluir_msg">
        <item quantity="one">Are you sure you want to delete this asset?</item>
        <item quantity="other">Are you sure you want to delete these %d assets?</item>
    </plurals>
    <plurals name="toast_excluido">
        <item quantity="one">Asset deleted</item>
        <item quantity="other">%d assets deleted</item>
    </plurals>
</resources>
